--- a/reactive/src/main/resources/templates/index.html
+++ b/reactive/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <p><strong>This is welcome page where you can navigate to another chapters:</strong></p>
 <menu>
     <ul>
-        <li><a th:href="@{/genres}" href="/genres.html">Genres</a></li>
+<!--        <li><a th:href="@{/genres}" href="/genres.html">Genres</a></li>-->
         <li><a th:href="@{/books}" href="/books.html">Library</a></li>
     </ul>
 </menu>
